--- a/mobilenaimansharga/src/pages/contact/contact.html
+++ b/mobilenaimansharga/src/pages/contact/contact.html
@@ -7,11 +7,68 @@
 </ion-header>
 
 <ion-content padding class="about">
-  <address>
-   Төмөрчний гудамж, 8-н шарга валют арилжааны захын Голомт банктай орц<br/>
-   2 давхар, Евро Од ББСБ,<br/>
-   Чингэлтэй дүүрэг, Улаанбаатар хот, Монгол улс.<br/><br/>
-   Утас: +976 99090212<br/>
-</address>
+
+<ion-card>
+  <img src="http://localhost:8000/uploads/currency/contact_header.jpg"/>
+  <ion-card-content>
+    <p>
+      Төмөрчний гудамж, 8-н шарга валют арилжааны захын Голомт банктай орц 2 давхар, 
+      Евро Од ББСБ, Чингэлтэй дүүрэг, Улаанбаатар хот, Монгол улс.
+    </p>
+  </ion-card-content>
+</ion-card>
+
+
+<button  ion-button full outline large>
+  <p style="margin-right:auto;">
+    99090212 
+  </p>
+  <img src="http://localhost:8000/uploads/currency/phone-call.png">
+</button>
+<button ion-button full outline large>
+  <p style="margin-right:auto;">
+    naimansharga@gmail.com
+  </p>
+  <img src="http://localhost:8000/uploads/currency/email.png">
+</button>
+<button ion-button full outline large>
+  <p style="margin-right:auto;">
+    www.naimansharga.mn 
+  </p>
+  <img src="http://localhost:8000/uploads/currency/grid-world.png">
+</button>
+<button ion-button full outline large>
+  <p style="margin-right:auto;">
+    Facebook
+  </p>
+  <img src="http://localhost:8000/uploads/currency/facebook.png">
+</button>
+<button ion-button full outline large>
+  <p style="margin-right:auto;">
+    Twitter
+  </p>
+  <img src="http://localhost:8000/uploads/currency/twitter.png">
+</button>
+
+
+<!--
+<button ion-button block outline>Outline + Block</button>
+
+<button ion-button round outline>Outline + Round</button>
+
+
+<ion-fab bottom right >
+  <button ion-fab>Share</button>
+    <ion-fab-list side="top">
+      <button ion-fab>Facebook</button>
+      <button ion-fab>Twitter</button>
+      <button ion-fab>Youtube</button>
+    </ion-fab-list>
+    <ion-fab-list side="left">
+      <button ion-fab>Vimeo</button>
+    </ion-fab-list>
+</ion-fab>
+
+-->
 
 </ion-content>
